--- a/charts/teslamate/Chart.yaml
+++ b/charts/teslamate/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-appVersion: v1.28.1
-description: A self-hosted data logger for your Tesla 🚘
+appVersion: v1.28.2
+description: "A self-hosted data logger for your Tesla \U0001F698"
 name: teslamate
-version: 0.3.0
+version: 0.3.1
 keywords:
   - teslamate
   - tesla
@@ -14,6 +14,6 @@ maintainers:
   - name: Dimitri Koshkin
     email: dimitri.koshkin@gmail.com
 dependencies:
-- name: grafana
-  version: 7.0.19
-  repository: https://grafana.github.io/helm-charts
+  - name: grafana
+    version: 7.0.19
+    repository: https://grafana.github.io/helm-charts
